[gd_scene load_steps=5 format=3 uid="uid://1titd7r124s7"]

[ext_resource type="Script" path="res://scenes/bodypart_pickable/bodypart_pickable.gd" id="1_trfrb"]

[sub_resource type="Gradient" id="Gradient_dqup6"]
interpolation_mode = 1
colors = PackedColorArray(0, 1, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pfpe3"]
gradient = SubResource("Gradient_dqup6")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_5rxub"]
radius = 5.09902

[node name="BodyPartPickable" type="Sprite2D"]
texture = SubResource("GradientTexture2D_pfpe3")
script = ExtResource("1_trfrb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5rxub")

[connection signal="area_entered" from="Area2D" to="." method="_on_arrive_in_pickup_area"]
[connection signal="area_exited" from="Area2D" to="." method="_on_leave_pickup_area"]
